<?xml version="1.0" encoding="utf-8"?>
<com.padcmyanmar.padcx.podcastassignment.views.viewpods.PlayerViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@drawable/button_background_media">

    <com.padcmyanmar.padcx.podcastassignment.views.components.RoundedCornerImageView
        android:id="@+id/ivPodcast"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:cornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/podcast" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/WhiteText.Bold"
        android:layout_width="@dimen/media_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/podcast_title"
        app:layout_constraintStart_toEndOf="@+id/ivPodcast"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/WhiteText"
        android:layout_width="@dimen/media_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/details"
        app:layout_constraintStart_toEndOf="@+id/ivPodcast"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:max="100"
        android:progress="80"
        android:progressTint="@color/colorProgressBar"
        app:layout_constraintStart_toEndOf="@+id/ivPodcast"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvTime"
        style="@style/WhiteText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_card_medium_2"
        android:text="@string/time_left"
        app:layout_constraintStart_toEndOf="@+id/progressbar"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvzz"
        style="@style/WhiteText.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/zz"
        app:layout_constraintBottom_toBottomOf="@+id/tv30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv30" />

    <TextView
        android:id="@+id/tv1x"
        style="@style/WhiteText.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/_1x"
        app:layout_constraintBottom_toBottomOf="@+id/tv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv15" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tv30"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_marginStart="32dp"
        android:src="@drawable/forward30"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toTopOf="@+id/btnPlay" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tv15"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_marginStart="32dp"
        android:src="@drawable/backward15"
        app:layout_constraintStart_toEndOf="@+id/tv1x"
        app:layout_constraintTop_toTopOf="@id/btnPlay" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnPlay"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/background_circle"
        android:padding="@dimen/margin_medium"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />

</com.padcmyanmar.padcx.podcastassignment.views.viewpods.PlayerViewPod>