<?xml version="1.0" encoding="utf-8"?>
<com.padcmyanmar.padcx.podcastassignment.views.viewpods.SmallPlayerViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    android:paddingBottom="20dp"
    android:background="@drawable/button_background_media">

    <TextView
        android:id="@+id/tvStartTime"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:max="100"
        android:progress="80"
        android:progressTint="@color/colorProgressBar"
        app:layout_constraintStart_toEndOf="@+id/tvStartTime"
        app:layout_constraintTop_toTopOf="@id/tvStartTime" />

    <TextView
        android:id="@+id/tvEndTime"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:text="@string/end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressbar"
        app:layout_constraintTop_toTopOf="@id/tvStartTime" />

    <TextView
        android:id="@+id/tvzz"
        style="@style/WhiteText.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/zz"
        app:layout_constraintBottom_toBottomOf="@+id/tv30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv30" />

    <TextView
        android:id="@+id/tv1x"
        style="@style/WhiteText.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/_1x"
        app:layout_constraintBottom_toBottomOf="@+id/tv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv15" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tv30"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_marginStart="32dp"
        android:src="@drawable/forward30"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toTopOf="@+id/btnPlay" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tv15"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_marginStart="32dp"
        android:src="@drawable/backward15"
        app:layout_constraintStart_toEndOf="@+id/tv1x"
        app:layout_constraintTop_toTopOf="@id/btnPlay" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnPlay"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/background_circle"
        android:padding="@dimen/margin_medium"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />

</com.padcmyanmar.padcx.podcastassignment.views.viewpods.SmallPlayerViewPod>